tests/lean/beginEndAsMacro.lean.expected.out
beginEndAsMacro.lean:21:2: error: unsolved goals
x : Nat
⊢ x + 0 = x
